# ArchLens

./: .gitignore  ARCHITECTURAL_PROBLEMS_RESOLVED.md  ARCHITECTURAL_REFACTORING_COMPLETE.md  ARCHITECTURE_INVESTIGATION_REPORT.md  BINARY_UPDATE_COMPLETED.md  BINARY_UPDATE_STATUS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  JAVA_CPP_SUPPORT_ADDED.md  LICENSE  PROJECT_READY.md  README.md  README_RU.md  REFACTORING_REPORT.md  RELATIVE_PATHS_ELIMINATED.md  SUMMARY_RELATIVE_PATHS_FIX.md  TESTING_REPORT.md  build.rs  detailed_analysis.md  diagram.mmd  fix_all_warnings.py  fix_analysis_warnings.py  fix_chrono.py  index.html  package.json  tauri.conf.json  test_diagram.mmd  test_export.txt  vite.config.ts
examples/: README.md  basic_analysis.rs  mcp_integration.js
mcp/: --focus-critical  --include-metrics  .gitignore  .npmignore  AI_OPTIMIZATION_COMPLETE.md  HONEST_STATUS_REPORT.md  README.md  TROUBLESHOOTING.md  analysis_output.md  archinalysator_architecture.mmd  archlens_mcp_server.cjs  critical_analysis.txt  cursor_config.json  cursor_settings_example.json  demo.js  detailed_structure.txt  diagram.mmd  install_guide.md  install_simple.js  package.json  project_diagram.mmd  setup_complete.md  simple_openmcp_server.cjs  test_access_fix.js  test_formatter_snapshots.js  test_mcp.js  test_mcp_rust_stdio.js  test_mcp_simple.js  test_mcp_stdio.js  test_optimized.js  test_unified.js  verbose_analysis.txt  ГЛУБОКИЙ_АНАЛИЗ_ПРОБЛЕМ_КОДА.md
mcp/bundle/: index.cjs
public/: index.html
src/: App.tsx  advanced_metrics.rs  capsule_constructor.rs  capsule_enricher.rs  capsule_enricher_v2.rs  capsule_graph_builder.rs  cli.rs  cli_old.rs  commands.rs  core.rs  diff_analyzer.rs  exporter.rs  file_scanner.rs  integration_tests.rs  lib.rs  main.rs  main.tsx  metadata_extractor.rs  parser_ast.rs  test_commands.rs  theme.ts  types.rs  validator_optimizer.rs
src/cli/: diagram.rs  export.rs  handlers.rs  mod.rs  parser.rs  stats.rs
src/cli/exporters/: ai_compact.rs  analysis.rs  metrics.rs  mod.rs  patterns.rs  utils.rs
src/constructor/: analyzer.rs  core.rs  mod.rs  optimizer.rs  warnings.rs
src/enrichment/: code_smells.rs  content_analysis.rs  dependency_analysis.rs  enricher_core.rs  mod.rs  pattern_detection.rs  quality_analyzer.rs  quality_metrics.rs  semantic_analysis.rs  semantic_analyzer.rs
src/graph/: cycle_detector.rs  graph_builder.rs  metrics_calculator.rs  mod.rs  relation_analyzer.rs
src/metrics/: complexity_analyzer.rs  mod.rs
src/validation/: cohesion.rs  complexity.rs  core.rs  coupling.rs  cycles.rs  layers.rs  mod.rs  naming.rs  optimizer.rs  patterns.rs  solid.rs
tests/: exporter_compact.rs  exporter_snapshots.rs  exporter_summary_json.rs  exporter_summary_layers_highsev.rs  mcp_detail_level.rs  mcp_http_ai_recommend.rs  mcp_http_ai_summary.rs  mcp_http_e2e.rs  mcp_http_sse.rs  mcp_http_timeout.rs  mcp_http_tools.rs  mcp_stdio_ai_recommend.rs  mcp_stdio_e2e.rs  mcp_stdio_timeout.rs
tests/fixtures/small_project/src/: a.rs  b.rs
tests/golden/: ai_summary_layers_highsev.json  ai_summary_small.json
