[package]
name = "archlens"
version = "1.0.0"
edition = "2021"
description = "Advanced architecture analysis tool with AI-powered insights for code quality, SOLID principles, and technical debt assessment"
license = "MIT"
authors = ["ArchLens Contributors"]
repository = "https://github.com/yourusername/archlens"
homepage = "https://github.com/yourusername/archlens"
documentation = "https://github.com/yourusername/archlens/wiki"
readme = "README.md"
keywords = ["architecture", "analysis", "code-quality", "ai", "mcp"]
categories = ["development-tools", "command-line-utilities"]
exclude = [
    "target/",
    "mcp/node_modules/",
    "*.log",
    "temp_*",
    "test_*"
]

[[bin]]
name = "archlens"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
tauri = { version = "1.7", features = ["dialog-open", "dialog-save", "fs-copy-file", "fs-create-dir", "fs-exists", "fs-read-dir", "fs-read-file", "fs-remove-dir", "fs-remove-file", "fs-rename-file", "fs-write-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
# #ДОДЕЛАТЬ: Вернуть tree-sitter после решения проблем линковки
# tree-sitter = "0.20"
# tree-sitter-rust = "0.20"
# tree-sitter-javascript = "0.20"
# tree-sitter-typescript = "0.20"
# tree-sitter-python = "0.20"
thiserror = "1.0"
anyhow = "1.0"
walkdir = "2.4"
regex = "1.11"
petgraph = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
ignore = "0.4"
tokio = { version = "1.0", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
